--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ repositories {
 
 dependencies {
     compile project(':Core')
+    compile project(':RTIA')
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
 
