Cycle - reducing build size by building only a single distribution of the performance test app

--- a/test/performance/build.gradle
+++ b/test/performance/build.gradle
@@ -27,3 +27,17 @@ mainClassName = "com.microsoft.applicationinsights.core.volume.ThroughputTest"
 dependencies {
     compile project(':core')
 }
+
+def distributionType = getDistributionType()
+
+distTar {
+    onlyIf { distributionType == "tar" }
+}
+
+distZip {
+    onlyIf { distributionType == "zip" }
+}
+
+def getDistributionType() {
+    System.properties["distributionType"] ?: "zip"
+}
