--- a/agent/build.gradle
+++ b/agent/build.gradle
@@ -24,6 +24,7 @@ plugins {
 }
 
 apply from: "$buildScriptsDir/common-java.gradle"
+apply from: "$buildScriptsDir/self-contained-publishing.gradle"
 
 shadowJar {
     classifier = ''
