--- a/collectd/build.gradle
+++ b/collectd/build.gradle
@@ -24,6 +24,7 @@ plugins {
 }
 
 apply from: "$buildScriptsDir/common-java.gradle"
+apply from: "$buildScriptsDir/publishing.gradle"
 
 // Since we're building the shadow jar, we have no use in the jar contains only CollectD code.
 jar.enabled = false
