--- a/gradle/self-contained-publishing.gradle
+++ b/gradle/self-contained-publishing.gradle
@@ -68,7 +68,7 @@ task prepareJavadocArchive(type: Jar){
 
 task copyLibsToGlobalArtifactsFolder(type: Copy) {
     from libsDir
-    into new File(artifactsDirectoryRoot, project.name)
+    into new File(artifactsSelfContainedDirectoryRoot, project.name)
     dependsOn assemble, prepareSourcesArchive, prepareJavadocArchive
 }
 
