--- a/core/build.gradle
+++ b/core/build.gradle
@@ -21,7 +21,7 @@
 
 apply from: "$buildScriptsDir/common-java.gradle"
 apply from: "$buildScriptsDir/publishing.gradle"
-//apply from: "$buildScriptsDir/remote-sign.gradle"
+apply from: "$buildScriptsDir/remote-sign.gradle"
 
 if (System.env."windir" != null) {
     apply from: "native.gradle"
