remote sign task first version

--- a/gradle/remote-sign.gradle
+++ b/gradle/remote-sign.gradle
@@ -61,7 +61,7 @@ repositories {
     mavenCentral()
 }
 
-task prepareRemoteSign {
+task prepareRemoteSign << {
     dependsOn copyToRemoteJenkinsMachine
 }
 
