--- a/gradle/self-contained-publishing.gradle
+++ b/gradle/self-contained-publishing.gradle
@@ -26,7 +26,7 @@ def releaseNotesFileDir = "$project.buildDir/src/common/main/resources"
 
 task copyReleaseNotesToCommonResourcesDir(type: Copy) {
     from(rootDir) {
-        include "release_notes.txt"
+        include "ThirdPartyNotices.txt"
     }
     into releaseNotesFileDir
 }
