--- a/gradle/signing.gradle
+++ b/gradle/signing.gradle
@@ -22,12 +22,21 @@
 apply plugin: 'signing'
 
 task gpgSign(type: Sign) {
-    assert (dirToSign && !dirToSign.isEmpty() && new File(dirToSign).exists())
-    logger.info("[gpgSign] Directory for gpg signing files set to $dirToSign")
 
-    fileTree(dir: dirToSign).files.each {
-        f -> sign f
-        logger.info("[gpgSign] File $f added for gpg signing")
+    def names = []
+    fileTree(project).visit {
+        FileVisitDetails details->
+            names << details.file.path
     }
+
+    println names
+
+//    assert (dirToSign && !dirToSign.isEmpty() && new File(dirToSign).exists())
+//    logger.info("[gpgSign] Directory for gpg signing files set to $dirToSign")
+//
+//    fileTree(dir: dirToSign).files.each {
+//        f -> sign f
+//        logger.info("[gpgSign] File $f added for gpg signing")
+//    }
 }
 
