--- a/gradle/signing.gradle
+++ b/gradle/signing.gradle
@@ -19,10 +19,14 @@
  * DEALINGS IN THE SOFTWARE.
  */
 
-apply from: "$buildScriptsDir/common-java.gradle"
 apply plugin: 'signing'
 
 task gpgSign(type: Sign) {
+
+    rootProjectBuildDir = new File(rootDir, 'build')
+
+    artifactsDirectoryRoot = new File(rootProjectBuildDir, 'maven-artifacts')
+    artifactsSelfContainedDirectoryRoot = new File(rootProjectBuildDir, 'self-contained-artifacts')
 
     def names = []
     fileTree(new File(artifactsSelfContainedDirectoryRoot)).visit {
