--- a/gradle/signing.gradle
+++ b/gradle/signing.gradle
@@ -20,11 +20,10 @@
  */
 
 apply plugin: 'signing'
-apply plugin: 'java'
 
 task gpgSign(type: Sign) {
 
-    rootProjectBuildDir = new File(rootDir, 'build')
+    rootProjectBuildDir = new File($rootDir, 'build')
 
     artifactsDirectoryRoot = new File(rootProjectBuildDir, 'maven-artifacts')
     artifactsSelfContainedDirectoryRoot = new File(rootProjectBuildDir, 'self-contained-artifacts')
