--- a/gradle/signing.gradle
+++ b/gradle/signing.gradle
@@ -23,7 +23,7 @@ apply plugin: 'signing'
 
 task gpgSign(type: Sign) {
 
-    rootProjectBuildDir = new File($rootDir, 'build')
+    def rootProjectBuildDir = new File(rootDir, 'build')
 
     artifactsDirectoryRoot = new File(rootProjectBuildDir, 'maven-artifacts')
     artifactsSelfContainedDirectoryRoot = new File(rootProjectBuildDir, 'self-contained-artifacts')
