--- a/gradle/signing.gradle
+++ b/gradle/signing.gradle
@@ -31,7 +31,7 @@ task gpgSign(type: Sign) {
     def names = []
     fileTree(artifactsSelfContainedDirectoryRoot).visit {
         FileVisitDetails details->
-            names << details.file.path
+            println details.file.path
     }
 
     println names
