--- a/gradle/signing.gradle
+++ b/gradle/signing.gradle
@@ -25,7 +25,7 @@ task gpgSign(type: Sign) {
 
     println 'start'
 
-    def rootProjectBuildDir = new File(rootDir, 'build')
+    def rootProjectBuildDir = new File('AppInsights-Java', 'build')
 
     def artifactsDirectoryRoot = new File(rootProjectBuildDir, 'maven-artifacts')
     def artifactsSelfContainedDirectoryRoot = new File(rootProjectBuildDir, 'self-contained-artifacts')
