--- a/gradle/signing.gradle
+++ b/gradle/signing.gradle
@@ -24,8 +24,10 @@ apply plugin: 'signing'
 task gpgSign(type: Sign) {
 
     println 'start'
+    println rootDir.getParent()
 
-    def rootFolder = rootDir.getParent() + 'AppInsights-Java'
+    def rootFolder = rootDir.getParent() + '/AppInsights-Java'
+    println rootFolder
     def rootProjectBuildDir = new File(rootFolder, 'build')
 
     def artifactsDirectoryRoot = new File(rootProjectBuildDir, 'maven-artifacts')
