--- a/gradle/signing.gradle
+++ b/gradle/signing.gradle
@@ -36,11 +36,12 @@ task gpgSign(type: Sign) {
     rootProjectBuildDir = new File(rootProjectBuildDir, 'build')
 
     def artifactsSelfContainedDirectoryRoot = new File(rootProjectBuildDir, 'self-contained-artifacts')
+    println 'artifactsSelfContainedDirectoryRoot ' + artifactsSelfContainedDirectoryRoot
 
-    println artifactsSelfContainedDirectoryRoot
-    artifactsSelfContainedDirectoryRoot.eachFile() { file->
-        println file.getName()
-    }
+//    println artifactsSelfContainedDirectoryRoot
+//    artifactsSelfContainedDirectoryRoot.eachFile() { file->
+//        println file.getName()
+//    }
 
     println 'finish'
 //    assert (dirToSign && !dirToSign.isEmpty() && new File(dirToSign).exists())
