--- a/gradle/publishing.gradle
+++ b/gradle/publishing.gradle
@@ -177,7 +177,7 @@ def writePomToArtifactsDirectory(pomObject, directoryName) {
 }
 
 def getArtifactsDirectory(artifactId) {
-    File dir = new File(baseFolder, artifactId)
+    File dir = new File($baseFolder, artifactId)
     dir.mkdirs()
 
     return dir
