--- a/gradle/signing.gradle
+++ b/gradle/signing.gradle
@@ -22,8 +22,8 @@
 apply plugin: 'signing'
 
 task gpgSign(type: Sign) {
-    def dir = new File("\\\\si-storage\\build\\MASI\\Java-SDK   ", projectNameToSign)
-    dir = new File(dir, projectBuildToSign)
+    def dir = new File(mainDirToSign, projectNameToSign)
+    dir = new File(dir, projectBuildNumberToSign)
     dir = new File(dir, "build")
     dir = new File(dir, projectArtifactsToSign)
     dir = new File(dir, "unsigned")
